objects/ssot__CourseOfferingAttendance__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AttendanceDate__c</fullName>
        <label>AttendanceDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CourseOfferingParticipantId__c</fullName>
        <label>Course Offering Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExcusedAbsenceReason__c</fullName>
        <label>Excused Absence Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Course Offering Attendance Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InstructonType__c</fullName>
        <label>Instruction Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsExcused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Excused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719820267386_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CourseOfferingAttendance_CourseOffer_rel</label>
        <referenceTo>ssot__CourseOfferingParticipant__dlm</referenceTo>
        <relationshipLabel>CourseOfferingAttendance_CourseOffer_rel</relationshipLabel>
        <relationshipName>rel_1719820267386_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>